feat: API validation